--- a/SM4_Optimization/SM4_Optimization.vcxproj
+++ b/SM4_Optimization/SM4_Optimization.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Unoptimized.cpp" />
+    <ClCompile Include="Optimized.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
