--- a/SM4_Optimization/SM4_Optimization.vcxproj.filters
+++ b/SM4_Optimization/SM4_Optimization.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Unoptimized.cpp">
+    <ClCompile Include="Optimized.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
